--- a/src/main.html
+++ b/src/main.html
@@ -5,33 +5,33 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-<script src="http://localhost/mootools/mootools-core-1.4.5-full-compat.js"></script>
-<script src="http://localhost/breslin/clientside/application/application_breslin.php"></script>
-<script src="http://localhost/breslin/clientside/network/network.php"></script>
-<script src="http://localhost/breslin/breslin/statemachine/state.php"></script>
-<script src="http://localhost/breslin/statemachine/state_machine.php"></script>
-<script src="http://localhost/breslin/clientside/application/states/application_global.php"></script>
-<script src="http://localhost/breslin/clientside/application/states/application_initialize.php"></script>
-<script src="http://localhost/breslin/clientside/application/states/application_main.php"></script>
-<script src="http://localhost/breslin/clientside/application/states/application_play.php"></script>
-<script src="http://localhost/breslin/clientside/bytebuffer/byte_buffer.php"></script>
-<script src="http://localhost/breslin/clientside/game/game.php"></script>
-<script src="http://localhost/breslin/clientside/game/states/game_global.php"></script>
-<script src="http://localhost/breslin/clientside/game/states/game_initialize.php"></script>
-<script src="http://localhost/breslin/clientside/game/states/game_pause.php"></script>
-<script src="http://localhost/breslin/clientside/game/states/game_play.php"></script>
-<script src="http://localhost/breslin/clientside/shape/shape.php"></script>
-<script src="http://localhost/breslin/math/vector_3d.php"></script>
-<script src="http://localhost/breslin/clientside/command/command.php"></script>
-<script src="http://localhost/breslin/clientside/div/div.php"></script>
-<script src="http://localhost/breslin/clientside/ability/ability.php"></script>
-<script src="http://localhost/breslin/clientside/ability/move/ability_move.php"></script>
-<script src="http://localhost/breslin/clientside/ability/move/ability_move_state.php"></script>
-<script src="http://localhost/breslin/clientside/ability/move/global_process_tick_move.php"></script>
-<script src="http://localhost/breslin/clientside/ability/move/catchup_process_tick_move.php"></script>
-<script src="http://localhost/breslin/clientside/ability/move/normal_process_tick_move.php"></script>
-<script src="http://localhost/breslin/clientside/ability/move/normal_interpolate_tick_move.php"></script>
-<script src="http://localhost/breslin/clientside/ability/move/ability_move_state_machine.php"></script>
+<script src="http://192.168.1.101/mootools/mootools-core-1.4.5-full-compat.js"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/application_breslin.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/network/network.php"></script>
+<script src="http://192.168.1.101/breslin/breslin/statemachine/state.php"></script>
+<script src="http://192.168.1.101/breslin/statemachine/state_machine.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/states/application_global.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/states/application_initialize.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/states/application_main.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/states/application_play.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/bytebuffer/byte_buffer.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/game.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/states/game_global.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/states/game_initialize.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/states/game_pause.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/states/game_play.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/shape/shape.php"></script>
+<script src="http://192.168.1.101/breslin/math/vector_3d.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/command/command.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/div/div.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/ability.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/ability_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/ability_move_state.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/global_process_tick_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/catchup_process_tick_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/normal_process_tick_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/normal_interpolate_tick_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/ability_move_state_machine.php"></script>
 
 </head>
 
