sending data from c++ to browser clients

--- a/src/main.html
+++ b/src/main.html
@@ -56,7 +56,7 @@ window.addEvent('domready', function()
         {
             //    console.log(data);
              //   socket.emit('my other event', { my: 'data' });
-		mApplication.log('hhhhhh');
+		mApplication.log('message:' + data);
         });
 }
 
