getting unsigned but not signed

--- a/src/main.html
+++ b/src/main.html
@@ -56,7 +56,8 @@ window.addEvent('domready', function()
         {
             //    console.log(data);
              //   socket.emit('my other event', { my: 'data' });
-		mApplication.log('message:' + data);
+		var typeView = new Uint32Array(data,0,1);		
+		mApplication.log('message:' + typeView[0]);
         });
 }
 
