--- a/src/main.html
+++ b/src/main.html
@@ -5,33 +5,33 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-<script src="http://abcandyou.com/mootools/mootools-core-1.4.5-full-compat.js"></script>
-<script src="http://abcandyou.com/breslin/clientside/application/application_breslin.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/network/network.php"></script>
-<script src="http://abcandyou.com/breslin/breslin/statemachine/state.php"></script>
-<script src="http://abcandyou.com/breslin/statemachine/state_machine.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/application/states/application_global.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/application/states/application_initialize.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/application/states/application_main.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/application/states/application_play.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/bytebuffer/byte_buffer.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/game/game.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/game/states/game_global.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/game/states/game_initialize.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/game/states/game_pause.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/game/states/game_play.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/shape/shape.php"></script>
-<script src="http://abcandyou.com/breslin/math/vector_3d.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/command/command.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/div/div.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/ability/ability.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/ability/move/ability_move.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/ability/move/ability_move_state.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/ability/move/global_process_tick_move.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/ability/move/catchup_process_tick_move.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/ability/move/normal_process_tick_move.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/ability/move/normal_interpolate_tick_move.php"></script>
-<script src="http://abcandyou.com/breslin/clientside/ability/move/ability_move_state_machine.php"></script>
+<script src="http://192.168.1.101/mootools/mootools-core-1.4.5-full-compat.js"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/application_breslin.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/network/network.php"></script>
+<script src="http://192.168.1.101/breslin/breslin/statemachine/state.php"></script>
+<script src="http://192.168.1.101/breslin/statemachine/state_machine.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/states/application_global.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/states/application_initialize.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/states/application_main.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/states/application_play.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/bytebuffer/byte_buffer.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/game.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/states/game_global.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/states/game_initialize.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/states/game_pause.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/states/game_play.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/shape/shape.php"></script>
+<script src="http://192.168.1.101/breslin/math/vector_3d.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/command/command.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/div/div.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/ability.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/ability_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/ability_move_state.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/global_process_tick_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/catchup_process_tick_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/normal_process_tick_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/normal_interpolate_tick_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/ability_move_state_machine.php"></script>
 
 </head>
 
@@ -54,11 +54,17 @@ window.addEvent('domready', function()
         
 	mApplication.mNetwork.mSocket.on('news', function (data)
         {
+/*
+		if (data[0] == -101)
+		{
+			mApplication.log('message:' + data[0]);
+		}
+*/
             //    console.log(data);
              //   socket.emit('my other event', { my: 'data' });
-		var typeView = new Int8Array(data,0,1);		
-		var outgoingSequenceView = new Int8Array(data,1,2);		
-		mApplication.log('message:' + typeView[0] + ':' + outgoingSequenceView[0]);
+	//	var typeView = new Int8Array(data,0,1);		
+	//	var outgoingSequenceView = new Int8Array(data,1,2);		
+	//	mApplication.log('message:' + typeView[0] + ':' + outgoingSequenceView[0]);
         });
 }
 
