getting data in socket.io on server. then maybe send it to client yourself.

--- a/src/main.html
+++ b/src/main.html
@@ -3,6 +3,7 @@
 <head>
 <title>ABC AND YOU</title>
 
+<script src="http://192.168.1.101/typedarray.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
 <script src="http://192.168.1.101/mootools/mootools-core-1.4.5-full-compat.js"></script>
@@ -51,9 +52,44 @@ window.addEvent('domready', function()
 
         //main loop
         var t=setInterval("mApplication.processUpdate()",32)
-        
+       
+
+function pack(bytes) {
+    var chars = [];
+    for(var i = 0, n = bytes.length; i < n;) {
+        chars.push(((bytes[i++] & 0xff) << 8) | (bytes[i++] & 0xff));
+    }
+    return String.fromCharCode.apply(null, chars);
+}
+
+function unpack(str) {
+    var bytes = [];
+    for(var i = 0, n = str.length; i < n; i++) {
+        var char = str.charCodeAt(i);
+        bytes.push(char >>> 8, char & 0xFF);
+    }
+    return bytes;
+}
+
+ 
 	mApplication.mNetwork.mSocket.on('news', function (data)
         {
+var mask = 1 << 7;
+if (data[0] & mask != 0) {
+  // bit is set
+			mApplication.log('yesbit');
+} else {
+  // bit is not set
+			mApplication.log('nobit');
+}
+/*
+		var char = data[i] << 8;
+		var a = ~data[0];
+		var b = a>>1;
+		mApplication.log('a:' + a);
+		mApplication.log('b:' + b);
+		mApplication.log('char:' + char);
+*/		
 /*
 		if (data[0] == -101)
 		{
