--- a/src/main.html
+++ b/src/main.html
@@ -57,7 +57,7 @@ window.addEvent('domready', function()
 		var a = data.split(','); 
 		if (a[0] == -103)
 		{
-			mApplication.log('t:' + a[0] + 'c:' + a[1] + 'i:' + a[2] + 'x:' + a[3] + 'y:' + a[4] + 'z:' + a[5]);
+			mApplication.log('t:' + a[0] + 'c:' + a[1] + 'i:' + a[2] + 'x:' + a[3] + 'y:' + a[4] + 'z:' + a[5] + 'x:' + a[6] + 'z:' + a[7] + 'm:' + a[8] + 'a:' + a[9]);
 		}
         });
 }
