--- a/src/main.html
+++ b/src/main.html
@@ -52,12 +52,17 @@ window.addEvent('domready', function()
         //main loop
         var t=setInterval("mApplication.processUpdate()",32)
        
-	mApplication.mNetwork.mSocket.on('news', function (data)
+	mApplication.mNetwork.mSocket.on('news', function (byteBuffer)
         {
-		var a = data.split(','); 
+		var a = byteBuffer.split(','); 
 		if (a[0] == -103)
 		{
 			mApplication.log('t:' + a[0] + 'c:' + a[1] + 'i:' + a[2] + 'x:' + a[3] + 'y:' + a[4] + 'z:' + a[5] + 'x:' + a[6] + 'z:' + a[7] + 'm:' + a[8] + 'a:' + a[9]);
+			mApplication.mGame.addShape(byteBuffer);
+		}
+		if (a[0] == 1)
+		{
+			mApplication.mGame.readServerTick(byteBuffer);
 		}
         });
 }
