need to send update

--- a/src/main.html
+++ b/src/main.html
@@ -62,6 +62,7 @@ window.addEvent('domready', function()
 		}
 		if (a[0] == 1)
 		{
+			mApplication.log('1111');
 			mApplication.mGame.readServerTick(byteBuffer);
 		}
         });
