--- a/src/main.html
+++ b/src/main.html
@@ -66,7 +66,7 @@ window.addEvent('domready', function()
 		}
 		if (a[0] == 1)
 		{
-			mApplication.log('1111');
+			mApplication.log('length:' + a.length);	
 			mApplication.mGame.readServerTick(byteBuffer);
 		}
         });
