methinks we are not telling about shapes that already exist.

--- a/src/main.html
+++ b/src/main.html
@@ -66,6 +66,7 @@ window.addEvent('domready', function()
 
                 if (type == -103)
                 {
+			mApplication.log('type:' + type);
                         mApplication.mGame.addShape(byteBuffer);
                 }
 
