printing out ghost and player in set position.

--- a/src/main.html
+++ b/src/main.html
@@ -80,7 +80,11 @@ window.addEvent('domready', function()
 );
 
 </script>
-<p id="mMessageFrame">mMessageFrame</p>
+<p id="mMessageFrameA">mMessageFrameA</p>
+<p id="mMessageFrameB">mMessageFrameB</p>
+<p id="mMessageFrameC">mMessageFrameC</p>
+<p id="mMessageFrameD">mMessageFrameD</p>
+<p id="mMessageFrameE">mMessageFrameE</p>
 
 </body>
 </html>
