well found out where the zeriong out is.

--- a/src/main.html
+++ b/src/main.html
@@ -85,6 +85,10 @@ window.addEvent('domready', function()
 <p id="mMessageFrameC">mMessageFrameC</p>
 <p id="mMessageFrameD">mMessageFrameD</p>
 <p id="mMessageFrameE">mMessageFrameE</p>
+<p id="mMessageFrameF">mMessageFrameF</p>
+<p id="mMessageFrameG">mMessageFrameG</p>
+<p id="mMessageFrameH">mMessageFrameH</p>
+<p id="mMessageFrameI">mMessageFrameI</p>
 
 </body>
 </html>
