--- a/src/main_lan.html
+++ b/src/main_lan.html
@@ -66,7 +66,11 @@ window.addEvent('domready', function()
 
                 if (type == -103)
                 {
-                        mApplication.log('type:' + type);
+			byteBuffer.beginReading();
+			for (i = 0; i < byteBuffer.mBufferArray.length; i++)
+			{
+				mApplication.log('byte: ' + i + ' = ' + byteBuffer.readByte());	
+			}
                         mApplication.mGame.addShape(byteBuffer);
                 }
 
