--- a/src/main_lan.html
+++ b/src/main_lan.html
@@ -36,6 +36,8 @@
 <script src="http://192.168.1.101/breslin/clientside/ability/move/normal_process_tick_move.php"></script>
 <script src="http://192.168.1.101/breslin/clientside/ability/move/normal_interpolate_tick_move.php"></script>
 <script src="http://192.168.1.101/breslin/clientside/ability/move/ability_move_state_machine.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/animation/animation.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/animation/animation_advanced.php"></script>
 
 </head>
 
