--- a/src/main_school.html
+++ b/src/main_school.html
@@ -49,7 +49,7 @@ var mApplication;
 
 window.addEvent('domready', function()
 {
-        mApplication = new ApplicationBreslin('192.168.2.88', 30004);
+        mApplication = new ApplicationBreslin('192.168.2.88', '10000');
 
         //input
         document.addEvent("keydown", mApplication.keyDown);
