--- a/src/main_lan.html
+++ b/src/main_lan.html
@@ -49,7 +49,7 @@ var mApplication;
 
 window.addEvent('domready', function()
 {
-        mApplication = new ApplicationBreslin('192.168.1.101', 30004);
+        mApplication = new ApplicationBreslin('192.168.1.101','10000');
 
         //input
         document.addEvent("keydown", mApplication.keyDown);
