--- a/src/main_school.html
+++ b/src/main_school.html
@@ -46,7 +46,7 @@
 <script>
 
 var mApplication;
-var mSize;
+var mSize = 0;
 var mMiddleOfViewPort = new Vector3D();;
 
 window.addEvent('domready', function()
@@ -54,7 +54,7 @@ window.addEvent('domready', function()
        	mSize = window.getSize();
 
         //let's move control object to middle of screen
-        mMiddleOfViewPort.x =  mSize.x /2;
+        mMiddleOfViewPort.x =  mSize.x / 2;
         mMiddleOfViewPort.y =  0;
         mMiddleOfViewPort.z =  mSize.y / 2;
 
@@ -111,7 +111,7 @@ window.onresize = function(event)
 	mSize = window.getSize();	
 
         //let's move control object to middle of screen
-        mMiddleOfViewPort.x =  this.mSize.x /2;
+        mMiddleOfViewPort.x =  mSize.x / 2;
         mMiddleOfViewPort.y =  0;
         mMiddleOfViewPort.z =  mSize.y / 2;
 }
