fixed up src files.

--- a/src/main.html
+++ b/src/main.html
@@ -9,35 +9,35 @@
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
-<script src="http://71.23.229.73/mootools/mootools-core-1.4.5-full-compat.js"></script>
-<script src="http://71.23.229.73/breslin/clientside/application/application_breslin.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/network/network.php"></script>
-<script src="http://71.23.229.73/breslin/breslin/statemachine/state.php"></script>
-<script src="http://71.23.229.73/breslin/statemachine/state_machine.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/application/states/application_global.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/application/states/application_initialize.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/application/states/application_main.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/application/states/application_play.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/bytebuffer/byte_buffer.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/game/game.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/game/states/game_global.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/game/states/game_initialize.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/game/states/game_pause.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/game/states/game_play.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/shape/shape.php"></script>
-<script src="http://71.23.229.73/breslin/math/vector_3d.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/command/command.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/div/div.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/ability/ability.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/ability/move/ability_move.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/ability/move/ability_move_state.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/ability/move/global_process_tick_move.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/ability/move/catchup_process_tick_move.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/ability/move/normal_process_tick_move.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/ability/move/normal_interpolate_tick_move.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/ability/move/ability_move_state_machine.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/animation/animation.php"></script>
-<script src="http://71.23.229.73/breslin/clientside/animation/animation_advanced.php"></script>
+<script src="http://192.168.1.101/mootools/mootools-core-1.4.5-full-compat.js"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/application_breslin.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/network/network.php"></script>
+<script src="http://192.168.1.101/breslin/breslin/statemachine/state.php"></script>
+<script src="http://192.168.1.101/breslin/statemachine/state_machine.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/states/application_global.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/states/application_initialize.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/states/application_main.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/application/states/application_play.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/bytebuffer/byte_buffer.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/game.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/states/game_global.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/states/game_initialize.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/states/game_pause.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/game/states/game_play.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/shape/shape.php"></script>
+<script src="http://192.168.1.101/breslin/math/vector_3d.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/command/command.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/div/div.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/ability.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/ability_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/ability_move_state.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/global_process_tick_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/catchup_process_tick_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/normal_process_tick_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/normal_interpolate_tick_move.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/ability/move/ability_move_state_machine.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/animation/animation.php"></script>
+<script src="http://192.168.1.101/breslin/clientside/animation/animation_advanced.php"></script>
 
 </head>
 
@@ -46,11 +46,20 @@
 <script>
 
 var mApplication;
+var mSize = 0;
+var mMiddleOfViewPort = new Vector3D();;
 
 window.addEvent('domready', function()
 {
-        mApplication = new ApplicationBreslin('71.23.229.73','10000');
+       	mSize = window.getSize();
 
+        //let's move control object to middle of screen
+        mMiddleOfViewPort.x =  mSize.x / 2;
+        mMiddleOfViewPort.y =  0;
+        mMiddleOfViewPort.z =  mSize.y / 2;
+
+        mApplication = new ApplicationBreslin('192.168.1.101','10000');
+       	
         //input
         document.addEvent("keydown", mApplication.keyDown);
         document.addEvent("keyup", mApplication.keyUp);
@@ -95,8 +104,18 @@ window.addEvent('domready', function()
                 }
         });
 }
-
 );
+
+window.onresize = function(event)
+{
+	mSize = window.getSize();	
+
+        //let's move control object to middle of screen
+        mMiddleOfViewPort.x =  mSize.x / 2;
+        mMiddleOfViewPort.y =  0;
+        mMiddleOfViewPort.z =  mSize.y / 2;
+}
+
 
 </script>
 <p id="mMessageFrameA">mMessageFrameA</p>
