--- a/src/main_lan.html
+++ b/src/main_lan.html
@@ -46,11 +46,20 @@
 <script>
 
 var mApplication;
+var mSize = 0;
+var mMiddleOfViewPort = new Vector3D();;
 
 window.addEvent('domready', function()
 {
-        mApplication = new ApplicationBreslin('192.168.1.101','10000');
+       	mSize = window.getSize();
 
+        //let's move control object to middle of screen
+        mMiddleOfViewPort.x =  mSize.x / 2;
+        mMiddleOfViewPort.y =  0;
+        mMiddleOfViewPort.z =  mSize.y / 2;
+
+        mApplication = new ApplicationBreslin('192.168.1.101','10000');
+       	
         //input
         document.addEvent("keydown", mApplication.keyDown);
         document.addEvent("keyup", mApplication.keyUp);
@@ -95,8 +104,18 @@ window.addEvent('domready', function()
                 }
         });
 }
-
 );
+
+window.onresize = function(event)
+{
+	mSize = window.getSize();	
+
+        //let's move control object to middle of screen
+        mMiddleOfViewPort.x =  mSize.x / 2;
+        mMiddleOfViewPort.y =  0;
+        mMiddleOfViewPort.z =  mSize.y / 2;
+}
+
 
 </script>
 <p id="mMessageFrameA">mMessageFrameA</p>
