--- a/src/main.html
+++ b/src/main.html
@@ -119,14 +119,13 @@ window.onresize = function(event)
 
 </script>
 <p id="mMessageFrameA">mMessageFrameA</p>
-<p id="mMessageFrameB">mMessageFrameB</p>
-<p id="mMessageFrameC">mMessageFrameC</p>
-<p id="mMessageFrameD">mMessageFrameD</p>
-<p id="mMessageFrameE">mMessageFrameE</p>
-<p id="mMessageFrameF">mMessageFrameF</p>
-<p id="mMessageFrameG">mMessageFrameG</p>
-<p id="mMessageFrameH">mMessageFrameH</p>
-<p id="mMessageFrameI">mMessageFrameI</p>
+<div style="position: absolute;
+              left: 50px;
+              top: 50px;
+              width: 50px;
+              height: 50px;
+              border-top: 1px solid red;
+              border-left: 1px solid red">text</div>
 
 </body>
 </html>
