going back to version before I was messing with login.

--- a/src/main_lan.html
+++ b/src/main_lan.html
@@ -118,6 +118,15 @@ window.onresize = function(event)
 
 
 </script>
+<p id="mMessageFrameA">mMessageFrameA</p>
+<p id="mMessageFrameB">mMessageFrameB</p>
+<p id="mMessageFrameC">mMessageFrameC</p>
+<p id="mMessageFrameD">mMessageFrameD</p>
+<p id="mMessageFrameE">mMessageFrameE</p>
+<p id="mMessageFrameF">mMessageFrameF</p>
+<p id="mMessageFrameG">mMessageFrameG</p>
+<p id="mMessageFrameH">mMessageFrameH</p>
+<p id="mMessageFrameI">mMessageFrameI</p>
 
 </body>
 </html>
