--- a/src/main_school.html
+++ b/src/main_school.html
@@ -16,6 +16,7 @@
 <script src="http://192.168.2.88/breslin/statemachine/state_machine.php"></script>
 <script src="http://192.168.2.88/breslin/clientside/application/states/application_global.php"></script>
 <script src="http://192.168.2.88/breslin/clientside/application/states/application_initialize.php"></script>
+<script src="http://192.168.2.88/breslin/clientside/application/states/application_login.php"></script>
 <script src="http://192.168.2.88/breslin/clientside/application/states/application_main.php"></script>
 <script src="http://192.168.2.88/breslin/clientside/application/states/application_play.php"></script>
 <script src="http://192.168.2.88/breslin/clientside/bytebuffer/byte_buffer.php"></script>
