esc is hosing something up? so i am using quit. it's getting to server but not coming back to client.

--- a/src/main_115.html
+++ b/src/main_115.html
@@ -84,16 +84,18 @@ window.addEvent('domready', function()
 
 		if (type == mApplication.mMessageLoggedIn)
                 {
-                        mApplication.log('LoggedIn');
                         mApplication.mLoggedIn = true;
                 }
 
                 if (type == mApplication.mMessageLoggedOut)
                 {
-                        mApplication.log('LoggedOut');
                         mApplication.mLoggedIn = false;
                 }
 
+                if (type == mApplication.mMessageLeaveGame)
+                {
+                        mApplication.mLeaveGame = true;
+                }
 
                 if (type == 1)
                 {
