--- a/src/main_115.html
+++ b/src/main_115.html
@@ -77,6 +77,22 @@ window.addEvent('domready', function()
 
                 type = byteBuffer.readByte();
 
+/*
+                        std::string school;
+                        int length = byteBuffer->ReadByte();
+                        for (int i = 0; i < length; i++)
+                        {
+                                char c =  byteBuffer->ReadByte();
+                                school.append(1,c);
+                        }
+                        mSelectMenuSchool->addItem(school);
+*/
+		mApplication.log('type:' + type);			
+		if (type == -109)
+		{
+			mApplication.log('109 recieced in main');			
+		}
+	
                 if (type == -103)
                 {
 			mApplication.mGame.addShape(byteBuffer);
@@ -85,7 +101,6 @@ window.addEvent('domready', function()
                 if (type == -104)
 		{
 			mApplication.mGame.removeShape(byteBuffer);
-			console.log('in udp have a game and sending removeShape to browswer');
 		}
 
 		if (type == mApplication.mMessageLoggedIn)
