next: initialize screen should show something...

--- a/src/main_115.html
+++ b/src/main_115.html
@@ -77,6 +77,12 @@ window.addEvent('domready', function()
 
                 type = byteBuffer.readByte();
 
+		//mMessageConnected
+  		if (type == -90)
+                {
+                        mApplication.mConnected = true;
+                }
+
 		if (type == -109)
 		{
                 	length = byteBuffer.readByte();
